log/build_2023-04-21_00-47-56/joystick_pub/stderr.log
  File "/home/bo/ws_joystickarm/install/joystick_pub/lib/python3.10/site-packages/joystick_pub/joystick_tcp.py", line 4
    import
          ^
SyntaxError: invalid syntax

